# wxwidgets_basic

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/wxwidgets_basic/: main_window.hpp  sample_application.hpp
src/: main_window.cpp  sample_application.cpp
